test/variable/use_local_in_initializer.lox
var a = "outer"
{
  var a = a // error: can't read local variable in its own initializer
}
